Use namespace std:: to compile graph2d. apparently makes it compile in MacOS X. /me wonders why it works on his system :/...

BUG: 261423

svn path=/trunk/KDE/kdeedu/kalgebra/; revision=1211066